--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
         "@vitejs/plugin-react": "^1.3.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
+        "eslint": "^8.19.0",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "prettier": "^2.7.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "tailwindcss": "^3.1.0",
         "vite": "^2.9.11"
+    },
+    "dependencies": {
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0"
     }
 }
