--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Laravel-breeze-sample
 APP_ENV=local
 APP_KEY=base64:MngDR0Gz8mkXol4A0B6VtGrhWlUw463kzCZj4nA3yT0=
 APP_DEBUG=true
