--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "eslint": "^8.19.0",
-        "laravel-vite-plugin": "^0.2.1",
+        "laravel-vite-plugin": "0.5.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "prettier": "^2.7.1",
